rest/rest-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rest
  labels: # <-- moved under metadata
    app: rest
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rest
  template:
    metadata:
      labels:
        app: rest
    spec:
      containers:
        - name: rest
          image: us-central1-docker.pkg.dev/demucs-lab/msas/msas-rest:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: rest-service
spec:
  selector:
    app: rest
  ports:
    - name: http
      port: 5000
      targetPort: 5000
  type: NodePort
