rest/rest-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rest-service
spec:
  selector:
    app: rest
  ports:
    - name: http
      port: 5000
      targetPort: 5000
  type: NodePort
